k8s/overlays/production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # On ne réécrit rien pour que le Backend reçoive bien le chemin complet /api/v1/...
spec:
  ingressClassName: nginx
  rules:
    - host: my-project-app.local
      http:
        paths:
          # 1. Le trafic API va vers le Backend
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 8080

          # 2. Tout le reste va vers le Frontend
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-front-angular-service
                port:
                  number: 80
